feat: add timeline do aluno
